cluster/infrastructure/wg/002-deployment.yaml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: wg-mx
  namespace: wireguard
  labels:
    app: wg-mx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-mx
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wg-mx
    spec:
      containers:
        - name: wg-mx
          image: 'lscr.io/linuxserver/wireguard:latest'
          ports:
            - containerPort: 51820
              protocol: UDP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /lib/modules
            name: lib-modules
          - name: wg-mx-volume
            mountPath: /config
          securityContext:
            capabilities:
              add:
              - NET_ADMIN
              - SYS_MODULE
      volumes:
      - name: lib-modules
        hostPath:
          path: /lib/modules
      - name: wg-mx-volume
        persistentVolumeClaim:
          claimName: wg-mx-config
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
